[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=1]
[ext_resource path="res://home.png" type="Texture" id=2]
[ext_resource path="res://b_exit.png" type="Texture" id=3]
[ext_resource path="res://b_exitPress.png" type="Texture" id=4]
[ext_resource path="res://b_play.png" type="Texture" id=5]
[ext_resource path="res://b_playPress.png" type="Texture" id=6]
[ext_resource path="res://b_howToPlay.png" type="Texture" id=7]
[ext_resource path="res://b_howPress.png" type="Texture" id=8]
[ext_resource path="res://b_high.png" type="Texture" id=9]
[ext_resource path="res://b_highPress.png" type="Texture" id=10]
[ext_resource path="res://b_set.png" type="Texture" id=11]
[ext_resource path="res://b_setPress.png" type="Texture" id=12]
[ext_resource path="res://musik/home.wav" type="AudioStream" id=13]

[node name="depan" type="Node2D"]

position = Vector2( 398.5, 353.961 )
scale = Vector2( 0.99875, 0.996068 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 2.40405, -0.101593 )
scale = Vector2( 0.483556, 0.483335 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="exit" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.1214
anchor_bottom = 0.11352
margin_left = 55.0
margin_top = 125.0
margin_right = 603.23
margin_bottom = 216.735
rect_scale = Vector2( 0.43, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="play" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = -121.0
margin_right = 613.0
margin_bottom = -23.0
rect_scale = Vector2( 0.43, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Mouse" ]

[node name="howToPlay" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = -64.0
margin_right = 611.0
margin_bottom = 35.0
rect_scale = Vector2( 0.43, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="highSkor" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = -4.0
margin_right = 611.0
margin_bottom = 95.0
rect_scale = Vector2( 0.43, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 60.0
margin_right = 610.0
margin_bottom = 159.0
rect_scale = Vector2( 0.43, 0.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 13 )
volume_db = 0.1
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="exit" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="play" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="howToPlay" to="." method="_on_howToPlay_pressed"]

[connection signal="pressed" from="highSkor" to="." method="_on_highSkor_pressed"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


